# lanscope

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  justfile
.github/aur/: PKGBUILD
.github/workflows/: ci.yaml  release.yaml
lanscope/: Cargo.toml  build.rs
lanscope-common/: Cargo.toml
lanscope-common/src/: event.rs  flow.rs  lib.rs
lanscope-ebpf/: Cargo.toml  rust-toolchain.toml
lanscope-ebpf/src/: main.rs
lanscope/src/: alert.rs  app.rs  cli.rs  config.rs  error.rs  exporter.rs  features.rs  lib.rs  main.rs  netfmt.rs
lanscope/src/anomaly/: heuristics.rs  mod.rs  onnx.rs
lanscope/src/capture/: ebpf.rs  mock.rs  mod.rs
lanscope/src/decode/: dhcp.rs  dns.rs  mdns.rs  mod.rs  ssdp.rs
lanscope/src/fingerprint/: engine.rs  mod.rs  oui.rs  rules.rs
lanscope/src/registry/: mod.rs
lanscope/src/storage/: mod.rs  sqlite.rs
lanscope/src/tui/: mod.rs
ml/: README.md  features.py  parity.py  requirements.txt  train.py
xtask/: Cargo.toml
xtask/src/: main.rs
